--- a/spec/mainmenu.api.yaml
+++ b/spec/mainmenu.api.yaml
@@ -49,7 +49,13 @@ components:
         - items
     MainMenuViewItem:
       properties:
-        viewIdentifier:
+        identifier:
+          type: string
+          description: Either a viewIdentifier or a componentPresentationIdentifier
+        title:
+          type: string
+        iconbase64:
           type: string
       required:
-        - viewIdentifier
+        - identifier
+        - title
