STAC-23920: Model order as a double

--- a/spec/component_presentations_api.yaml
+++ b/spec/component_presentations_api.yaml
@@ -115,7 +115,8 @@ components:
         iconbase64:
           type: string
         order:
-          type: integer
+          type: number
+          format: double
       required:
         - group
         - order
