--- a/spec/component_presentations_api.yaml
+++ b/spec/component_presentations_api.yaml
@@ -101,11 +101,17 @@ components:
           type: string
         plural:
           type: string
-        title:
-          type: string
       required:
         - singular
         - plural
+    PresentationOverview:
+      type: object
+      properties:
+        title:
+          type: string
+        mainMenu:
+          $ref: "#/components/schemas/PresentationMainMenu"
+      required:
         - title
     PresentationMainMenu:
       type: object
@@ -145,8 +151,8 @@ components:
           type: string
         name:
           $ref: "#/components/schemas/PresentationName"
-        mainMenu:
-          $ref: "#/components/schemas/PresentationMainMenu"
+        overview:
+          $ref: "#/components/schemas/PresentationOverview"
     ComponentPresentationApiError:
       type: object
       properties:
