STAC-23918: don't assume icon is inline url

--- a/spec/component_presentations_api.yaml
+++ b/spec/component_presentations_api.yaml
@@ -147,7 +147,7 @@ components:
     PresentationDefinition:
       type: object
       properties:
-        iconbase64:
+        icon:
           type: string
         name:
           $ref: "#/components/schemas/PresentationName"
