--- a/spec/snapshot.api.yaml
+++ b/spec/snapshot.api.yaml
@@ -14,12 +14,12 @@ paths:
       parameters:
         - $ref: "#/components/parameters/timeout-ms"
       requestBody:
-        $ref: "#/components/requestBodies/SnapshotRequest"
+        $ref: "#/components/requestBodies/ViewSnapshotRequest"
       responses:
         '200':
-          $ref: "#/components/responses/querySnapshotResult"
+          $ref: "#/components/responses/viewQuerySnapshotResult"
         '400':
-          $ref: "#/components/responses/queryParsingFailure"
+          $ref: "#/components/responses/viewQueryParsingFailure"
         '401':
           description: "User is not authorized"
         '403':
@@ -41,22 +41,22 @@ components:
 
 
   requestBodies:
-    SnapshotRequest:
+    ViewSnapshotRequest:
       description: Request body for querying a topology snapshot
       required: true
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/SnapshotRequest'
+            $ref: '#/components/schemas/ViewSnapshotRequest'
 
   responses:
-    querySnapshotResult:
+    viewQuerySnapshotResult:
       description: Snapshot query result
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/QuerySnapshotResult'
-    queryParsingFailure:
+    viewQueryParsingFailure:
       description: Query parsing failed
       content:
         application/json:
@@ -64,12 +64,12 @@ components:
             $ref: '#/components/schemas/QueryParsingFailure'
 
   schemas:
-    SnapshotRequest:
+    ViewSnapshotRequest:
       type: object
       properties:
         _type:
           type: string
-          enum: [ SnapshotRequest ]
+          enum: [ ViewSnapshotRequest ]
         query:
           type: string
           description: STQL query string
@@ -79,6 +79,10 @@ components:
           example: "0.0.1"
         metadata:
           $ref: '#/components/schemas/QueryMetadata'
+        viewId:
+          type: integer
+          format: int64
+          description: View identifier that gets mapped back in the response. Preserved for compatibility when this API got moved to OpenAPI. Not used for any processing.
       required:
         - _type
         - query
@@ -162,7 +166,7 @@ components:
           enum:
             - QuerySnapshotResult
           description: Discriminator field
-        snapshotResponse:
+        viewSnapshotResponse:
           type: object
           description: |
             The query result or error response. This is opaque at the API level but contains one of the following DTO types:
@@ -172,6 +176,10 @@ components:
             - ViewSnapshotTopologySizeOverflow (error)
             - ViewSnapshotDataUnavailable (error)
             Use the _type field to discriminate between types.
+        viewId:
+          type: integer
+          format: int64
+          description: View identifier that was provided in the ViewSnapshotRequest. Preserved for compatibility when this API got moved to OpenAPI. Not used for any processing.
       required:
         - _type
-        - snapshotResponse
+        - viewSnapshotResponse
