STAC-23918: rename icon property - it can also hold a url

--- a/spec/components.api.yaml
+++ b/spec/components.api.yaml
@@ -223,7 +223,7 @@ components:
       properties:
         typeName:
           type: string
-        iconbase64:
+        icon:
           type: string
         data:
           $ref: "#/components/schemas/ComponentData"
