STAC-23918: rename icon property for events and monitor check status

--- a/spec/events.api.yaml
+++ b/spec/events.api.yaml
@@ -434,7 +434,7 @@ components:
           type: array
           items:
             type: string
-        iconbase64:
+        icon:
           type: string
       required:
         - _type
