STAC-23918: consistently use icon field name

--- a/spec/component_presentations_api.yaml
+++ b/spec/component_presentations_api.yaml
@@ -118,7 +118,7 @@ components:
       properties:
         group:
           type: string
-        iconbase64:
+        icon:
           type: string
         order:
           type: number
